--- a/src/app/template.html
+++ b/src/app/template.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<!-- Avoid annoying CSP error logs -->
+<html ng-csp="no-inline-style;no-unsafe-eval">
 <head>
   <title>Angular Todo Chrome Extension</title>
 </head>
